--- a/app/assets/i18n/de.json
+++ b/app/assets/i18n/de.json
@@ -3,13 +3,13 @@
         "ACTION_BAR_TITLE": "Neues Konto erstellen",
         "DONE": "Fertig",
         "GENERATE_AGAIN": "Neu Generieren",
-        "INFO_SEED": "Bewege deinen Finger über diesen Bereich !",
-        "INFO_SEED_FINISHED": "Seed gesammelt !",
-        "INFO_STEP_ONE": "Erzeuge einen zufälligen Seed für die Generierung einer Passphrase !",
+        "INFO_SEED": "Bewege deinen Finger über diesen Bereich.",
+        "INFO_SEED_FINISHED": "Seed gesammelt.",
+        "INFO_STEP_ONE": "Erzeuge einen zufälligen Seed für die Generierung einer Passphrase.",
         "INFO_STEP_TWO": "Sichere alle 12 Wörter deiner Passphrase in der richtigen Reihenfolge",
-        "INFO_STEP_TWO_ACTION": "Schreibe die folgenden Wörter, getrennt durch ein Leerzeichen, auf und halte sie geheim !",
-        "INFO_STEP_THREE": "Bitte gebe nun jedes Wort deiner Passphrase nacheinander ein !",
-        "INFO_STEP_THREE_ACTION": "Tippe das Wort an der Stelle #{{value}} ein und wähle es aus !",
+        "INFO_STEP_TWO_ACTION": "Schreibe die folgenden Wörter, getrennt durch ein Leerzeichen, auf und halte sie geheim!",
+        "INFO_STEP_THREE": "Bitte gebe nun jedes Wort deiner Passphrase nacheinander ein.",
+        "INFO_STEP_THREE_ACTION": "Tippe das Wort an der Stelle #{{value}} ein und wähle es aus.",
         "INFO_STEP_FOUR": "Setze einen sechsstelligen Pin Code für dein Konto. Der Pin Code wird benutzt um ausgehende Transaktionen zu bestätigen.",
         "PIN_INPUT_HINT": "PIN",
         "POSSIBILITY_INPUT_HINT": "Wort #{{value}}",
@@ -23,7 +23,7 @@
         "ACTIVE_ACCOUNT_PIN_INFO": "Setze einen sechsstelligen Pin Code für dein Konto. Der Pin Code wird benutzt um ausgehende Transaktionen zu verifizieren.",
         "DONE": "Fertig",
         "IMPORT": "Importieren",
-        "INFO": "Importiere ein aktives Konto durch Eingabe der zugehörigen Passphrase oder importiere ein Offline Konto durch Eingabe einer Burst Adresse !",
+        "INFO": "Importiere ein aktives Konto durch Eingabe der zugehörigen Passphrase oder importiere ein Offline Konto durch Eingabe einer Burst Adresse.",
         "NEXT": "Weiter",
         "OFFLINE_ACCOUNT": "Offline Konto",
         "OFFLINE_ACCOUNT_DESCRIPTION": "Ein Offline Konto bietet die selben Funktionalitäten wie ein aktives Konto. Lediglich das Senden von Burstcoins ist nicht möglich.",
@@ -38,8 +38,8 @@
             "ACTIVATE": {
                 "ACTION_BAR_TITLE": "Account aktivieren",
                 "DONE": "Fertig",
-                "ENTER_PASSPHRASE": "Bitte gebe die Passphrase des Kontos {{value}} ein !",
-                "ENTER_PIN": "Setze einen sechsstelligen PIN code !",
+                "ENTER_PASSPHRASE": "Bitte gebe die Passphrase des Kontos {{value}} ein.",
+                "ENTER_PIN": "Setze einen sechsstelligen PIN code.",
                 "PASSPHRASE_INPUT_HINT": "Passphrase",
                 "PIN_INPUT_HINT": "PIN",
                 "NEXT": "Weiter"
@@ -64,7 +64,7 @@
                 "ABOUT": "Über uns",
                 "ASSOCIATION": "In Zusammenarbeit mit",
                 "DEVELOPED": "Entwickelt von",
-                "TWITTER": "Folge uns auf Twitter für aktuelle Informationen über unsere Projekte !",
+                "TWITTER": "Folge uns auf Twitter für aktuelle Informationen über unsere Projekte!",
                 "VERSION": "Version"
             },
             "CURRENCY": {
@@ -82,7 +82,7 @@
             },
             "SUPPORT": {
                 "CONTRIBUTION": "Wir freuen uns auch über jegliche andere Hilfe",
-                "DONATE": "Du magst unsere App ? Unterstütze uns mit einer Spende !",
+                "DONATE": "Du magst unsere App ? Unterstütze uns mit einer Spende!",
                 "SUPPORT": "Unterstützen"
             },
             "TITLE": "Optionen"
@@ -101,37 +101,37 @@
     "START" : {
         "CREATE": "Erstellen",
         "IMPORT": "Importieren",
-        "INFO": "Kein Konto wurde bisher erstellt. Importiere ein bestehendes Konto oder erstelle einen Neuen !"
+        "INFO": "Kein Konto wurde bisher erstellt. Importiere ein bestehendes Konto oder erstelle ein Neues!"
     },
     "NOTIFICATIONS" : {
-        "ADDRESS": "Bitte gebe eine gültige Burst Adresse ein !",
-        "COPIED": "{{value}} in die Zwischenablage kopiert !",
-        "DECIMAL_AMOUNT": "Bitte gebe den gewünschten Betrag an Burstcoins als Dezimalzahl ein !",
-        "DECIMAL_FEE": "Bitte gebe eine Gebühr von mindestens 1 Burstcoin ein !",
-        "ENTER_SOMETHING": "Eingabe ist leer !",
-        "EXCEED": "Betrag und Gebühr überschreiten deinen Saldo !",
-        "PIN": "Bitte gebe eine sechstellige Zahl als Pin Code ein !",
-        "REMOVE": "Konto erfolgreich entfernt !",
+        "ADDRESS": "Bitte gebe eine gültige Burst Adresse ein!",
+        "COPIED": "{{value}} in die Zwischenablage kopiert!",
+        "DECIMAL_AMOUNT": "Bitte gebe den gewünschten Betrag an Burstcoins als Dezimalzahl ein!",
+        "DECIMAL_FEE": "Bitte gebe eine Gebühr von mindestens 1 Burstcoin ein!",
+        "ENTER_SOMETHING": "Eingabe ist leer!",
+        "EXCEED": "Betrag und Gebühr überschreiten deinen Saldo!",
+        "PIN": "Bitte gebe eine sechstellige Zahl als Pin Code ein!",
+        "REMOVE": "Konto erfolgreich entfernt!",
         "SELECTED": "Konto ausgewählt: {{value}}",
-        "TRANSACTION": "Transaktion erfolgreich !",
-        "UPDATE_CURRENCY": "Währung erfolgreich aktualisiert !",
-        "UDPDATE_LANGUAGE": "Sprache erfolgreich aktualisiert !",
-        "UPDATE_NODE": "Endpunkt erfolgreich aktualisiert !",
-        "WRONG_PASSPHRASE": "Die eingegebene Passphrase passt nicht zum öffentlichen Schlüssel deines Kontos !",
-        "WRONG_PIN": "Der eingegebene Pin Code stimmt nicht mit dem Pin Code des Kontos überein !",
+        "TRANSACTION": "Transaktion erfolgreich!",
+        "UPDATE_CURRENCY": "Währung erfolgreich aktualisiert!",
+        "UDPDATE_LANGUAGE": "Sprache erfolgreich aktualisiert!",
+        "UPDATE_NODE": "Endpunkt erfolgreich aktualisiert!",
+        "WRONG_PASSPHRASE": "Die eingegebene Passphrase passt nicht zum öffentlichen Schlüssel deines Kontos!",
+        "WRONG_PIN": "Der eingegebene Pin Code stimmt nicht mit dem Pin Code des Kontos überein!",
         "ERRORS": {
-            "ACCOUNT_ID": "Fehler beim Generieren der Konto Id !",
-            "ADDRESS": "Fehler beim Generieren der Burst Adresse !",
-            "CONNECTION": "Fehler beim Abrufen der Daten. Überprüfe deine Internetverbindung !",
-            "CURRENCY": "Fehler beim Aktualisieren der Währung !",
-            "KEYPAIR": "Fehler beim Generieren des Schlüsselpaars !",
-            "LANGUAGE": "Fehler beim Ändern der Sprache !",
-            "NODE": "Fehler beim Aktualisieren des Endpunkts !",
-            "QR_CODE": "Kein QR Code gescannt !",
-            "REDIRECT": "Senden von Burstcoin nicht möglich. Ausgewähltes Konto ist kein aktives Konto !",
-            "REMOVE": "Fehler beim Entfernen des Kontos !",
-            "UPDATE": "Fehler beim Aktualisieren des Kontos !",
-            "UNKNOWN_ACCOUNT": "Konto ist noch unbekannt. Keine Transaktionen gefunden !"
+            "ACCOUNT_ID": "Fehler beim Generieren der Konto Id!",
+            "ADDRESS": "Fehler beim Generieren der Burst Adresse!",
+            "CONNECTION": "Fehler beim Abrufen der Daten. Überprüfe deine Internetverbindung!",
+            "CURRENCY": "Fehler beim Aktualisieren der Währung!",
+            "KEYPAIR": "Fehler beim Generieren des Schlüsselpaars!",
+            "LANGUAGE": "Fehler beim Ändern der Sprache!",
+            "NODE": "Fehler beim Aktualisieren des Endpunkts!",
+            "QR_CODE": "Kein QR Code gescannt!",
+            "REDIRECT": "Senden von Burstcoin nicht möglich. Ausgewähltes Konto ist kein aktives Konto!",
+            "REMOVE": "Fehler beim Entfernen des Kontos!",
+            "UPDATE": "Fehler beim Aktualisieren des Kontos!",
+            "UNKNOWN_ACCOUNT": "Konto ist noch unbekannt. Keine Transaktionen gefunden!"
         }
     }
 }
