--- a/app/assets/i18n/es.json
+++ b/app/assets/i18n/es.json
@@ -3,12 +3,12 @@
         "ACTION_BAR_TITLE": "Crear nueva cuenta",
         "DONE": "Listo",
         "GENERATE_AGAIN": "Generar de nuevo",
-        "INFO_SEED": "Presiona y desliza aquí!",
-        "INFO_SEED_FINISHED": "Generador recibido!",
+        "INFO_SEED": "Presiona y desliza aquí.",
+        "INFO_SEED_FINISHED": "Generador recibido.",
         "INFO_STEP_ONE": "Primero crea un generador aleatorio para tu contraseña.",
         "INFO_STEP_TWO": "Ahora guarda o memoriza las 12 palabras de tu contraseña en este orden.",
         "INFO_STEP_TWO_ACTION": "Apunta las palabras, separadas por espacios, y mantenlas en secreto.",
-        "INFO_STEP_THREE": "Please reenter the words of your passphrase!",
+        "INFO_STEP_THREE": "Please reenter the words of your passphrase.",
         "INFO_STEP_THREE_ACTION": "Apunta #{{value}} and elígela.",
         "INFO_STEP_FOUR": "Elige un nip de 6 dígitos para la cuenta. Este se utiliza para aprobar transacciones salientes.",
         "PIN_INPUT_HINT": "NIP",
@@ -23,7 +23,7 @@
         "ACTIVE_ACCOUNT_PIN_INFO": "Elige un nip de 6 dígitos para la cuenta. Este se utiliza para aprobar transacciones salientes.",
         "DONE": "Listo",
         "IMPORT": "Importar",
-        "INFO": "Importa una cuenta existente usando su contraseña! Si no, importa una contraseña offline usando la dirección BurstCoin.",
+        "INFO": "Importa una cuenta existente usando su contraseña. Si no, importa una contraseña offline usando la dirección BurstCoin.",
         "NEXT": "Adelante",
         "OFFLINE_ACCOUNT": "Cuenta Offline",
         "OFFLINE_ACCOUNT_DESCRIPTION": "Una cuenta offline tiene la misma funcionalidad de una cuenta online, excepto que no puede enviar BurstCoin a otras cuentas.",
