--- a/app/assets/i18n/ru.json
+++ b/app/assets/i18n/ru.json
@@ -3,13 +3,13 @@
         "ACTION_BAR_TITLE": "Создать Новый Аккаунт",
         "DONE": "Готово",
         "GENERATE_AGAIN": "Создать заново",
-        "INFO_SEED": "Жмите и листайте в этой области!",
-        "INFO_SEED_FINISHED": "Фраза собрана!",
-        "INFO_STEP_ONE": "Первое, создайте случайную фразу для генерации пароля!",
-        "INFO_STEP_TWO": "Теперь Вам необходимо запомнить все 12 слов пароля в правильном порядке!",
-        "INFO_STEP_TWO_ACTION": "Запишите следующие слова, разделенные пробелом и сохраните их!",
-        "INFO_STEP_THREE": "Пож-та введите слова из вашего пароля!",
-        "INFO_STEP_THREE_ACTION": "Напишите слово #{{value}} и выберите его!",
+        "INFO_SEED": "Жмите и листайте в этой области.",
+        "INFO_SEED_FINISHED": "Фраза собрана.",
+        "INFO_STEP_ONE": "Первое, создайте случайную фразу для генерации пароля.",
+        "INFO_STEP_TWO": "Теперь Вам необходимо запомнить все 12 слов пароля в правильном порядке.",
+        "INFO_STEP_TWO_ACTION": "Запишите следующие слова, разделенные пробелом и сохраните их.",
+        "INFO_STEP_THREE": "Пож-та введите слова из вашего пароля.",
+        "INFO_STEP_THREE_ACTION": "Напишите слово #{{value}} и выберите его.",
         "INFO_STEP_FOUR": "Пож-та, задайте 6-значный пин код. Он используется для подтверждения исходящих транзакций.",
         "PIN_INPUT_HINT": "ПИН",
         "POSSIBILITY_INPUT_HINT": "Слово #{{value}}",
@@ -23,7 +23,7 @@
         "ACTIVE_ACCOUNT_PIN_INFO": " Пож-та, задайте 6-значный пин код. Он используется для подтверждения исходящих транзакций.",
         "DONE": "Готово",
         "IMPORT": "ИМПОРТ",
-        "INFO": "Импортируйте активный аккаунт, введя пароль! Или, импортируйте оффлайн аккаунт, введя Burstcoin кошелек!",
+        "INFO": "Импортируйте активный аккаунт, введя пароль. Или, импортируйте оффлайн аккаунт, введя Burstcoin кошелек.",
         "NEXT": "Далее",
         "OFFLINE_ACCOUNT": "Оффлайн Аккаунт",
         "OFFLINE_ACCOUNT_DESCRIPTION": "Оффлайн аккаунт обладает такими же функциями, как и активный, кроме возможности отправлять Burstcoins на другие счета.",
@@ -38,8 +38,8 @@
             "ACTIVATE": {
                 "ACTION_BAR_TITLE": "Активировать аккаунт",
                 "DONE": "Готово",
-                "ENTER_PASSPHRASE": "Введите пароль аккаунта {{value}} здесь!",
-                "ENTER_PIN": "Задайте 6-значный пин код!",
+                "ENTER_PASSPHRASE": "Введите пароль аккаунта {{value}} здесь.",
+                "ENTER_PIN": "Задайте 6-значный пин код.",
                 "PASSPHRASE_INPUT_HINT": "Пароль",
                 "PIN_INPUT_HINT": "ПИН",
                 "NEXT": "Далее"
@@ -64,7 +64,7 @@
                 "ABOUT": "О программе",
                 "ASSOCIATION": "Совместно с:",
                 "DEVELOPED": "Разработано",
-                "TWITTER": "Подписывайтесь на наш Twitter чтобы быть в курсе новостей!",
+                "TWITTER": "Подписывайтесь на наш Twitter чтобы быть в курсе новостей.",
                 "VERSION": "Версия"
             },
             "CURRENCY": {
@@ -81,8 +81,8 @@
                 "NODE": "Узел"
             },
             "SUPPORT": {
-                "CONTRIBUTION": "Мы также рады и не денежной поддержке проекта!",
-                "DONATE": "Понравилось наше приложение? Поддержите нас BURST!",
+                "CONTRIBUTION": "Мы также рады и не денежной поддержке проекта.",
+                "DONATE": "Понравилось наше приложение? Поддержите нас BURST.",
                 "SUPPORT": "Поддержать проект"
             },
             "TITLE": "Oпции"
@@ -101,7 +101,7 @@
     "START" : {
         "CREATE": "Создать",
         "IMPORT": "Импорт",
-        "INFO": "Нет подключенных аккаунтов! Импортируйте существующий аккаунт или создайте новый!"
+        "INFO": "Нет подключенных аккаунтов. Импортируйте существующий аккаунт или создайте новый!"
     },
     "NOTIFICATIONS" : {
         "ADDRESS": "Пожалуйста, введите верный Burstcoin адрес!",
