--- a/app/assets/i18n/it.json
+++ b/app/assets/i18n/it.json
@@ -3,13 +3,13 @@
         "ACTION_BAR_TITLE": "Crea Un Nuovo Account",
         "DONE": "Eseguito",
         "GENERATE_AGAIN": "Rigeneralo",
-        "INFO_SEED": "Tocca e sposta sopra questa area!",
-        "INFO_SEED_FINISHED": "Seed completato!",
-        "INFO_STEP_ONE": "Primo Passo, creazione di un Seed casuale per la generazione della tua passphrase!",
-        "INFO_STEP_TWO": "Secondo Passo, Memorizza tutte le 12 parole della tua passphrase nel corretto ordine!",
-        "INFO_STEP_TWO_ACTION": "Scrivi le seguenti parole separate dallo spazio e tienile segrete!",
-        "INFO_STEP_THREE": "Terzo Passo, Riscrivi le parole della tua passphrase!",
-        "INFO_STEP_THREE_ACTION": "Scrivi la parola #{{value}} e selezionala!",
+        "INFO_SEED": "Tocca e sposta sopra questa area.",
+        "INFO_SEED_FINISHED": "Seed completato.",
+        "INFO_STEP_ONE": "Primo Passo, creazione di un Seed casuale per la generazione della tua passphrase.",
+        "INFO_STEP_TWO": "Secondo Passo, Memorizza tutte le 12 parole della tua passphrase nel corretto ordine.",
+        "INFO_STEP_TWO_ACTION": "Scrivi le seguenti parole separate dallo spazio e tienile segrete.",
+        "INFO_STEP_THREE": "Terzo Passo, Riscrivi le parole della tua passphrase.",
+        "INFO_STEP_THREE_ACTION": "Scrivi la parola #{{value}} e selezionala.",
         "INFO_STEP_FOUR": "Quarto Passo, Imposta un pin code di sei cifre per il tuo Account. Il pin code è usato per approvare le transazioni in uscita.",
         "PIN_INPUT_HINT": "PIN",
         "POSSIBILITY_INPUT_HINT": "Parola #{{value}}",
@@ -23,7 +23,7 @@
         "ACTIVE_ACCOUNT_PIN_INFO": "Per Favore inserisci le sei cifre del pin code del tuo Account. Il pin code è usato per approvare le transazioni in uscita.",
         "DONE": "Eseguito",
         "IMPORT": "Importato",
-        "INFO": "Importa un Account attivo inserendo la sua passphrase! Altrimenti, importa un Account offline inserendo il suo indirizzo Burstcoin!",
+        "INFO": "Importa un Account attivo inserendo la sua passphrase. Altrimenti, importa un Account offline inserendo il suo indirizzo Burstcoin.",
         "NEXT": "Avanti",
         "OFFLINE_ACCOUNT": "Offline Account",
         "OFFLINE_ACCOUNT_DESCRIPTION": "Un offline account offre le stesse funzionalità di un Account attivo, senza poter inviare Burstcoins ad un altro indirizzo.",
@@ -37,8 +37,8 @@
         "ACCOUNTS": {
             "ACTIVATE": {
                 "DONE": "Eseguito",
-                "ENTER_PASSPHRASE": "Inserisci la passphrase per il tuo Account {{value}} qui!",
-                "ENTER_PIN": "Imposta un PIN code di sei cifre!",
+                "ENTER_PASSPHRASE": "Inserisci la passphrase per il tuo Account {{value}} qui.",
+                "ENTER_PIN": "Imposta un PIN code di sei cifre.",
                 "PASSPHRASE_INPUT_HINT": "Passphrase",
                 "PIN_INPUT_HINT": "Pin",
                 "NEXT": "Avanti"
@@ -63,7 +63,7 @@
                 "ABOUT": "Informazioni",
                 "ASSOCIATION": "In Associazione con",
                 "DEVELOPED": "Sviluppato da",
-                "TWITTER": "Seguici su twitter per ricevere aggiornamenti sul nostri progetti!",
+                "TWITTER": "Seguici su twitter per ricevere aggiornamenti sul nostri progetti.",
                 "VERSION": "Versione"
             },
             "CURRENCY": {
@@ -99,7 +99,7 @@
     "START" : {
         "CREATE": "Crea",
         "IMPORT": "Importa",
-        "INFO": "Nessun Account creato! Seleziona un Account esistente per importarlo o creane uno nuovo!"
+        "INFO": "Nessun Account creato. Seleziona un Account esistente per importarlo o creane uno nuovo!"
     },
     "NOTIFICATIONS" : {
         "ADDRESS": "Inserisci un indirizzo Burstcoin valido!",
