--- a/app/assets/i18n/pl.json
+++ b/app/assets/i18n/pl.json
@@ -3,13 +3,13 @@
         "ACTION_BAR_TITLE": "Stwórz nowe konto",
         "DONE": "Ukończono",
         "GENERATE_AGAIN": "Utwórz ponownie",
-        "INFO_SEED": "Naciśnij i przesuń w tym miejscu!",
-        "INFO_SEED_FINISHED": "Ziarno pobrane!",
-        "INFO_STEP_ONE": "Najpierw utwórz losowe ziarno do generacji Twojego hasła!",
-        "INFO_STEP_TWO": "Teraz musisz zapamiętać wszystkie 12 słów hasła w poprawnej kolejności!",
-        "INFO_STEP_TWO_ACTION": "Zapisz podane słowa i zachowaj je w sekrecie!",
-        "INFO_STEP_THREE": "Wprowadź ponownie swoje hasło!",
-        "INFO_STEP_THREE_ACTION": "Wpisz słowo #{{value}} i wybierz!",
+        "INFO_SEED": "Naciśnij i przesuń w tym miejscu.",
+        "INFO_SEED_FINISHED": "Ziarno pobrane.",
+        "INFO_STEP_ONE": "Najpierw utwórz losowe ziarno do generacji Twojego hasła.",
+        "INFO_STEP_TWO": "Teraz musisz zapamiętać wszystkie 12 słów hasła w poprawnej kolejności.",
+        "INFO_STEP_TWO_ACTION": "Zapisz podane słowa i zachowaj je w sekrecie.",
+        "INFO_STEP_THREE": "Wprowadź ponownie swoje hasło.",
+        "INFO_STEP_THREE_ACTION": "Wpisz słowo #{{value}} i wybierz.",
         "INFO_STEP_FOUR": "Ustal sześciocyfrowy pin dla twojego konta. Pin służy weryfikacji wychodzących transakcji.",
         "PIN_INPUT_HINT": "PIN",
         "POSSIBILITY_INPUT_HINT": "Słowo #{{value}}",
@@ -23,7 +23,7 @@
         "ACTIVE_ACCOUNT_PIN_INFO": "Ustal sześciocyfrowy pin dla twojego konta. Pin służy weryfikacji wychodzących transakcji.",
         "DONE": "Dalej",
         "IMPORT": "Importuj",
-        "INFO": "Importuj portfel online wprowadzając hasło! W innym wypadku wpisz adres Burstcoin aby wyświetlić portfel offline!",
+        "INFO": "Importuj portfel online wprowadzając hasło. W innym wypadku wpisz adres Burstcoin aby wyświetlić portfel offline.",
         "NEXT": "Dalej",
         "OFFLINE_ACCOUNT": "Portfel Offline",
         "OFFLINE_ACCOUNT_DESCRIPTION": "Portfel online oferuje te same funkcje co Online, za wyjątkiem możliwości wysyłania Burstcoin.",
@@ -37,8 +37,8 @@
         "ACCOUNTS": {
             "ACTIVATE": {
                 "DONE": "Gotowe",
-                "ENTER_PASSPHRASE": "Wpisz hasło {{value}} tutak!",
-                "ENTER_PIN": "Wpisz sześciocyfrowy PIN!",
+                "ENTER_PASSPHRASE": "Wpisz hasło {{value}} tutak.",
+                "ENTER_PIN": "Wpisz sześciocyfrowy PIN.",
                 "PASSPHRASE_INPUT_HINT": "Hasło",
                 "PIN_INPUT_HINT": "Pin",
                 "NEXT": "Dalej"
@@ -63,7 +63,7 @@
                 "ABOUT": "O nas",
                 "ASSOCIATION": "We współpracy z",
                 "DEVELOPED": "Opracowane przez",
-                "TWITTER": "Śledź nas na Twitter i bądź zawsze na bieżąco!",
+                "TWITTER": "Śledź nas na Twitter i bądź zawsze na bieżąco.",
                 "VERSION": "Wersja"
             },
             "CURRENCY": {
@@ -99,7 +99,7 @@
     "START" : {
         "CREATE": "Stwórz",
         "IMPORT": "Importuj",
-        "INFO": "Brak stworzonych kont! Importuj istniejące bądź utwórz nowe konto!"
+        "INFO": "Brak stworzonych kont. Importuj istniejące bądź utwórz nowe konto!"
     },
     "NOTIFICATIONS" : {
         "ADDRESS": "Wprowadź poprawny adres Burst!",
