contacts styling, add button, listview

--- a/app/assets/i18n/de.json
+++ b/app/assets/i18n/de.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "BURST senden",
         "AMOUNT": "Betrag",
         "BALANCE": "Saldo",
+        "CONTACTS": "Contacts",
         "FEE": "Gebühr",
         "RECIPIENT": "Empfänger",
         "PIN_INPUT_HINT": "PIN",
