--- a/app/assets/i18n/el.json
+++ b/app/assets/i18n/el.json
@@ -91,6 +91,7 @@
         "ACCEPT": "Αποδοχή",
         "AMOUNT": "Ποσό",
         "BALANCE": "Υπόλοιπο",
+        "CONTACTS": "Contacts",
         "FEE": "Προμήθεια",
         "RECIPIENT": "Παραλήπτης",
         "PIN_INPUT_HINT": "PIN",
