--- a/app/assets/i18n/en.json
+++ b/app/assets/i18n/en.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "Send BURST",
         "AMOUNT": "Amount",
         "BALANCE": "Balance",
+        "CONTACTS": "Contacts",
         "FEE": "Fee",
         "RECIPIENT": "Recipient",
         "PIN_INPUT_HINT": "Pin",
