--- a/app/assets/i18n/es.json
+++ b/app/assets/i18n/es.json
@@ -91,6 +91,7 @@
         "ACCEPT": "Aceptar",
         "AMOUNT": "Monto",
         "BALANCE": "Balance",
+        "CONTACTS": "Contacts",
         "FEE": "Comisión",
         "RECIPIENT": "Destinatario",
         "PIN_INPUT_HINT": "NIP",
