--- a/app/assets/i18n/fr.json
+++ b/app/assets/i18n/fr.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "Envoyer des BURST",
         "AMOUNT": "Montant",
         "BALANCE": "Solde",
+        "CONTACTS": "Contacts",
         "FEE": "Frais",
         "RECIPIENT": "Bénéficiaire",
         "PIN_INPUT_HINT": "Pin",
