--- a/app/assets/i18n/it.json
+++ b/app/assets/i18n/it.json
@@ -91,6 +91,7 @@
         "ACCEPT": "Accetto",
         "AMOUNT": "Importo",
         "BALANCE": "Saldo",
+        "CONTACTS": "Contacts",
         "FEE": "Tassa",
         "RECIPIENT": "Destinatario",
         "PIN_INPUT_HINT": "Pin",
