--- a/app/assets/i18n/ko.json
+++ b/app/assets/i18n/ko.json
@@ -93,6 +93,7 @@
     "ACTION_BAR_TITLE": "BURST 전송",
     "AMOUNT": "수량",
     "BALANCE": "잔액",
+    "CONTACTS": "Contacts",
     "FEE": "수수료",
     "RECIPIENT": "수령인",
     "PIN_INPUT_HINT": "핀",
