--- a/app/assets/i18n/pl.json
+++ b/app/assets/i18n/pl.json
@@ -91,6 +91,7 @@
         "ACCEPT": "Akceptuj",
         "AMOUNT": "Kwota",
         "BALANCE": "Stan konta",
+        "CONTACTS": "Contacts",
         "FEE": "Opłata",
         "RECIPIENT": "Odbiorca",
         "PIN_INPUT_HINT": "Pin",
