--- a/app/assets/i18n/ru.json
+++ b/app/assets/i18n/ru.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "Перевести BURST",
         "AMOUNT": "Сумма",
         "BALANCE": "Баланс",
+        "CONTACTS": "Contacts",
         "FEE": "Комиссия",
         "RECIPIENT": "Получатель",
         "PIN_INPUT_HINT": "ПИН",
