--- a/app/assets/i18n/sk.json
+++ b/app/assets/i18n/sk.json
@@ -92,6 +92,7 @@
         "ACCEPT": "Akceptovať",
         "AMOUNT": "Čiastka",
         "BALANCE": "Zostatok",
+        "CONTACTS": "Contacts",
         "FEE": "Poplatok",
         "RECIPIENT": "Príjemca",
         "PIN_INPUT_HINT": "PIN",
