--- a/app/assets/i18n/sv.json
+++ b/app/assets/i18n/sv.json
@@ -91,6 +91,7 @@
         "ACCEPT": "Acceptera",
         "AMOUNT": "Belopp",
         "BALANCE": "Saldo",
+        "CONTACTS": "Contacts",
         "FEE": "Avgift",
         "RECIPIENT": "Mottagare",
         "PIN_INPUT_HINT": "Pin",
