--- a/app/assets/i18n/ta.json
+++ b/app/assets/i18n/ta.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "அனுப்பு BURST",
         "AMOUNT": "தொகை",
         "BALANCE": "இருப்பு",
+        "CONTACTS": "Contacts",
         "FEE": "கட்டணம்",
         "RECIPIENT": "பெறுநர்",
         "PIN_INPUT_HINT": "ரகசிய எண்",
