--- a/app/assets/i18n/zh.json
+++ b/app/assets/i18n/zh.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "发 BURST",
         "AMOUNT": "金额",
         "BALANCE": "余额",
+        "CONTACTS": "Contacts",
         "FEE": "交易费",
         "RECIPIENT": "接受者",
         "PIN_INPUT_HINT": "Pin",
